# bongard_playbook

./: .gitignore  README.md  captions.sh  cmr.sh  commonsense.json  instructBLIP.json  instructBLIP_deepseek.json  instructBLIP_gpt41.json  instructBLIP_llama.json  irr_flowchart.txt  ivr_flowchart.txt  model.json  pyproject.toml  requirements.txt  run.sh  single.sh  transformed_dataset.json
archive/: blip_llama.json  blip_qwen3.json  gemma.json  gemma3_structured.json  gemma_dvrl.json  gpt41_structured.json  llava_qwen3.json  qwen25_dvrl.json
assets/: benchmarking_leaderboard.md
captions/: blip.json  blip2.json  gemini20_captions.json  gemma.json  gemma3_captions.json  gemma3_scaptions.json  gpt41_captions.json  gpt5_captions.json  gpt5_scaptions.json  llama4_captions.json  llava.json  llava16_captions.json  qwen25_captions.json  qwen25_scaptions.json
notebooks/: Test01.ipynb  analytics.ipynb  difficulty.ipynb  enhanced_analysis.json  enhanced_analysis_with_consistency.json  models.json  problem_set_analysis.ipynb  problem_stats.ipynb  problems.json  testbench.ipynb
results/: 26_worst_gpt41_gpt41.json  bongard_results_gemma3_latest_20250512_024400.csv  bongard_results_llama4_scout_20250512_033317.csv  cmr_gemini20_gemini20.json  cmr_gemma3_deepseekr1.json  cmr_gemma3_gemma3.json  cmr_gemma3_llama4.json  cmr_gemma3_qwen3.json  cmr_gpt41_deepseekr1.json  cmr_gpt41_gemma3.json  cmr_gpt41_gpt41.json  cmr_gpt41_gptoss.json  cmr_gpt41_llama4.json  cmr_gpt41_qwen3.json  cmr_gpt5_gpt5.json  cmr_gpt5_qwen3.json  cmr_llama4_deepseekr1.json  cmr_llama4_gemma3.json  llama.json  (+29 more)
(+26 files in other folders)
