[project]
name = "bongard-playbook"
version = "0.1.0"
description = "Bongard problem evaluation playbook"
requires-python = ">=3.13"
dependencies = [
    "pillow==11.2.1",
    "torch==2.7.0",
    "transformers==4.52.3",
    "accelerate==1.7.0",
    "openai==1.99.3",
    "matplotlib==3.10.3",
    "pycocoevalcap==1.2",
    "torchmetrics==1.7.1",
    "pandas==2.3.1",
    "seaborn==0.13.2",
    "numpy==2.3.2",
    "scipy>=1.16.1",
    "scikit-learn>=1.7.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts"]

[tool.uv]
dev-dependencies = []
